discord minimam support
